--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.2",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
